# solve_JCommonsenseQA_by_GPT3

./: .gitignore  README.md  download.sh  main.py  pyproject.toml
